@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.317 2006/03/01 10:40:03 ph10 Exp $
+$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.318 2006/03/01 11:24:04 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -244,6 +244,13 @@ PH/47 Added authenticated_sender_force to the smtp transport.
 PH/48 The ${prvs expansion was broken on systems where time_t was long long.
 
 PH/49 Installed latest patch from the Sieve maintainer.
+
+PH/50 When an Exim quota was set without a file count quota, and mailbox_size
+      was also set, the appendfile transport was unnecessarily scanning a
+      directory of message files (e.g. for maildir delivery) to find the count
+      of files (along with the size), even though it did not need this
+      information. It now does the scan only if it needs to find either the
+      size of the count of files.
 
 
 Exim version 4.60
